--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<li><a href="#about">About Us</a></li>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a class="nav-cta" href="#">Try Now</a></li>
+					<li><a class="nav-cta" href="./php/signin.php">Sign In</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -33,7 +33,7 @@
 			<h2>Chase</h2>
 			<p class="subtitle">Clean, Minimal Landing Page Template</p>
 			<div class="buttons">
-				<a href="#" class="button-1">Try Now</a>
+				<a href="#" class="button-1">Sign In</a>
 				<a href="#" class="button-2">Learn More</a>
 			</div>
 		</div>
