--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<li><a href="#about">About Us</a></li>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a class="nav-cta" href="./php/signin.php">Sign In</a></li>
+					<li><a class="nav-cta" href="./php/Html/login.html">Sign In</a></li>
 				</ul>
 			</nav>
 		</div>
